fix(provider/aws): fix multiple issues on AwsGlueSchema resources (#592)
Fix: #592