@@ -9,9 +9,10 @@ package io.streamthoughts.jikkou.aws.change;
 import static io.streamthoughts.jikkou.aws.change.AwsGlueSchemaChangeComputer.DATA_COMPATIBILITY;
 import static io.streamthoughts.jikkou.aws.change.AwsGlueSchemaChangeComputer.DATA_FORMAT;
 
-import io.streamthoughts.jikkou.aws.AwsGlueAnnotations;
+import io.streamthoughts.jikkou.aws.AwsGlueLabelsAndAnnotations;
 import io.streamthoughts.jikkou.core.data.TypeConverter;
 import io.streamthoughts.jikkou.core.models.change.ResourceChange;
+import io.streamthoughts.jikkou.core.models.change.SpecificStateChange;
 import io.streamthoughts.jikkou.core.reconciler.Operation;
 import io.streamthoughts.jikkou.core.reconciler.TextDescription;
 import java.util.Objects;
@@ -32,28 +33,25 @@ public final class AwsGlueSchemaChangeDescription implements TextDescription {
     @Override
     public String textual() {
         final String schemaName = change.getMetadata().getName();
-        
-        String compatibility = change.getSpec()
-            .getChanges()
-            .getLast(DATA_COMPATIBILITY, TypeConverter.String())
-            .getAfter();
-
-        DataFormat dataFormat = change.getSpec()
-            .getChanges()
-            .getLast(DATA_FORMAT, TypeConverter.of(DataFormat.class))
-            .getAfter();
-
-        String registryName = (String) change.getMetadata()
-            .getLabelByKey(AwsGlueAnnotations.SCHEMA_REGISTRY_NAME)
+        final String registryName = (String) change.getMetadata()
+            .getLabelByKey(AwsGlueLabelsAndAnnotations.SCHEMA_REGISTRY_NAME)
             .getValue();
 
+        SpecificStateChange<String> compatibility = change.getSpec()
+            .getChanges()
+            .getLast(DATA_COMPATIBILITY, TypeConverter.String());
+
+        SpecificStateChange<DataFormat> dataFormat = change.getSpec()
+            .getChanges()
+            .getLast(DATA_FORMAT, TypeConverter.of(DataFormat.class));
+        
         final Operation op = change.getSpec().getOp();
-        return String.format("%s schema '%s' (registryName=%s, dataFormat=%s, compatibility=%s)",
+        return "%s schema '%s' (registryName=%s, dataFormat=%s, compatibility=%s)".formatted(
             op.humanize(),
             schemaName,
             registryName,
-            dataFormat.name(),
-            compatibility
+            op.isUpdateOrCreate() ? dataFormat.getAfter().name() : dataFormat.getBefore().name(),
+            op.isUpdateOrCreate() ? compatibility.getAfter() : compatibility.getBefore()
         );
     }
 }
